app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  background-color: aliceblue;
}

main {
  height: 100%;
}

section {
  background-color: red;
  height: 100%;
  display: flex;
  justify-content: center;
  
body {
  color: rgb(var(--foreground-rgb));

}
body::-webkit-scrollbar{
  display: none;
}

a{
  text-decoration: none;
  color: inherit;
}

.button {
  --color: #00A97F;
  padding: 0.8em 1.7em;
  background-color: transparent;
  border-radius: .5em;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  transition: .5s;
  font-weight: 400;
  font-size: 16px;
  border: 1px solid;
  font-family: inherit;
  text-transform: uppercase;
  color: var(--color);
  z-index: 1;
 }
 
 .button::before, .button::after {
  content: '';
  display: block;
  width: 50px;
  height: 50px;
  transform: translate(-50%, -50%);
  position: absolute;
  border-radius: 50%;
  z-index: -1;
  background-color: var(--color);
  transition: 1s ease;
  font-family: 'Roboto', sans-serif;
  font-weight: bolder;
 }
 
 .button::before {
  top: -1em;
  left: -1em;
 }
 
 .button::after {
  left: calc(100% + 1em);
  top: calc(100% + 1em);
 }
 
 .button:hover::before, .button:hover::after {
  height: 410px;
  width: 410px;
 }
 
 .button:hover {
  color: rgb(10, 25, 30);
 }
 
 .button:active {
  filter: brightness(.8);
 }
 

.button__container{
  display: flex;
  gap: 15px;
  font-family: 'Roboto', sans-serif;
}

.MuiInputBase-input{
  border: none;
}

.page{
  margin-top: 80px;
  font-family: 'Lato', sans-serif;
}

.design{
  font-family: 'Lato', sans-serif;
  font-size: 30px;
  margin-left: 10%;
  margin-right: 10%;
}

.design2{
  font-family: 'Sometype Mono', monospace;
  font-size: 60px;
  margin-top: 10%;
  margin-left: 10%;
}

.card p {
  font-size: 17px;
  font-weight: 400;
  line-height: 20px;
  color: #666;
}

.card p.small {
  font-size: 14px;
}

.go-corner {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 32px;
  height: 32px;
  overflow: hidden;
  top: 0;
  right: 0;
  background-color: #00838d;
  border-radius: 0 4px 0 32px;
}

.go-arrow {
  margin-top: -4px;
  margin-right: -4px;
  color: white;
  font-family: courier, sans;
}

.card1 {
  display: block;
  position: relative;
  max-width: 262px;
  background-color: #f2f8f9;
  border-radius: 4px;
  padding: 32px 24px;
  margin: 12px;
  text-decoration: none;
  z-index: 0;
  overflow: hidden;
}

.card1:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: -16px;
  right: -16px;
  background: #00838d;
  height: 32px;
  width: 32px;
  border-radius: 32px;
  transform: scale(1);
  transform-origin: 50% 50%;
  transition: transform 0.25s ease-out;
}

.card1:hover:before {
  transform: scale(21);
}

.card1:hover p {
  transition: all 0.3s ease-out;
  color: rgba(255, 255, 255, 0.8);
}

.card1:hover h3 {
  transition: all 0.3s ease-out;
  color: #fff;
}

.card2 {
  display: block;
  top: 0px;
  position: relative;
  max-width: 262px;
  background-color: #f2f8f9;
  border-radius: 4px;
  padding: 32px 24px;
  margin: 12px;
  text-decoration: none;
  z-index: 0;
  overflow: hidden;
  border: 1px solid #f2f8f9;
}

.card2:hover {
  transition: all 0.2s ease-out;
  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
  top: -4px;
  border: 1px solid #ccc;
  background-color: white;
}

.card2:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: -16px;
  right: -16px;
  background: #00838d;
  height: 32px;
  width: 32px;
  border-radius: 32px;
  transform: scale(2);
  transform-origin: 50% 50%;
  transition: transform 0.15s ease-out;
}

.card2:hover:before {
  transform: scale(2.15);
}

.card3 {
  display: block;
  top: 0px;
  position: relative;
  max-width: 262px;
  background-color: #f2f8f9;
  border-radius: 4px;
  padding: 32px 24px;
  margin: 12px;
  text-decoration: none;
  overflow: hidden;
  border: 1px solid #f2f8f9;
}

.card3 .go-corner {
  opacity: 0.7;
}

.card3:hover {
  border: 1px solid #00838d;
  box-shadow: 0px 0px 999px 999px rgba(255, 255, 255, 0.5);
  z-index: 500;
}

.card3:hover p {
  color: #00838d;
}

.card3:hover .go-corner {
  transition: opactiy 0.3s linear;
  opacity: 1;
}

.card4 {
  display: block;
  top: 0px;
  position: relative;
  max-width: 262px;
  background-color: #fff;
  border-radius: 4px;
  padding: 32px 24px;
  margin: 12px;
  text-decoration: none;
  overflow: hidden;
  border: 1px solid #ccc;
}

.card4 .go-corner {
  background-color: #00838d;
  height: 100%;
  width: 16px;
  padding-right: 9px;
  border-radius: 0;
  transform: skew(6deg);
  margin-right: -36px;
  align-items: start;
  background-image: linear-gradient(-45deg, #8f479a 1%, #dc2a74 100%);
}

.card4 .go-arrow {
  transform: skew(-6deg);
  margin-left: -2px;
  margin-top: 9px;
  opacity: 0;
}

.card4:hover {
  border: 1px solid #cd3d73;
}

.card4 h3 {
  margin-top: 8px;
}

.card4:hover .go-corner {
  margin-right: -12px;
}

.card4:hover .go-arrow {
  opacity: 1;
}

.design3{
  display: flex;
  margin: auto;
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: wrap;
  gap: 20px;
  padding-inline: 57px;
}

  height: 100vh;
}

.heading {
  font-size: 10rem;
}
.container{
  height:fit-content;
  width: 100%;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  
}
.container img{
  height:150px;
  width:150px;
  position: absolute;
  top:205px;
  left:235px;
  opacity: 0; 
  animation: fadeIn 2s ease-in forwards; 
}

@keyframes fadeIn {
  from {
    opacity: 0; 
  }
  to {
    opacity: 1; 
  }
}
.homepagename{
height: 20rem;
} 
.container h1 {
  font-family: 'Cinzel', serif;
  opacity: 0; 
  animation: fadeIn 2s ease-in forwards; 
}

@keyframes fadeIn {
  from {
    opacity: 0; 
  }
  to {
    opacity: 1; 
  }
}
.container h3{
  font-family:'Edu TAS Beginner';
  opacity: 0; 
  animation: fadeIn 5s ease-in forwards; 
  font-size: 30px;
  border-top: 0px;
  left:60%;
  position: absolute;
  top:45%;
}

@keyframes fadeIn {
  from {
    opacity: 0; 
  }
  to {
    opacity: 1; 
  }
}

.animation_1{
  margin-top: -30PX;
  display: flex;
  justify-content: start;
  height:fit-content;
  width: 700px;
}
.animation_2{
  margin-top: -30PX;
  display: flex;
  justify-content: start;
  height:fit-content;
  width: 900px;

}
.animation_3{
  margin-top: -30PX;
  display: flex;
  justify-content: start;
  height: fit-content;
}


.hometext1{
  padding-top: 100PX;
  font-family: 'Sometype Mono';
}

.anim_text:nth-child(1) {
  display: flex;
  align-items: flex-start;
  grid-column: 1 / span 2;
}
.anim_text:nth-child(2) {
  display: flex;
  align-items: flex-start;
  grid-column: 2 / span 2;
  margin-top:150px;
}
.anim_text:nth-child(3) {
  display: flex;
  align-items: flex-start;
  grid-column: 1 / span 2;
  margin-top:150px;
}


.anim_container {
  width: 100%;
  display: grid;
  grid-template-columns: auto auto;

} 

.cursor {
  display: inline-block;
  height: 120px;
  margin-left: 12px;
  width: 2px;
  transform: translateY(4px);
  background-color: black;
}

